2009-10-25  Dmitry Xmelkov  <dmix@gmail.ru>

	* libc/string/strlcat.S: Rewrite to reduce size (considerably) and
	speed up.
	* libc/pmstring/strlcat_P.S: Ditto.
	* tests/simulate/string/strlcat.c: New file.
	* tests/simulate/pmstring/strlcat_P.c: New file.
	* NEWS: Add to optimized functions list.

2009-10-23  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/iox256d3.h: Update header file.

2009-10-18  Dmitry Xmelkov  <dmix@gmail.ru>

	* libc/string/strlcpy.S: Optimize: remove surplus size testing,
	reorder code.
	* libc/pmstring/strlcpy_P.S: Ditto.
	* tests/simulate/string/strlcpy.c: New file.
	* tests/simulate/pmstring/strlcpy_P.c: New file.
	* NEWS: Add to optimized functions list.

2009-10-11  Dmitry Xmelkov  <dmix@gmail.ru>

	* include/avr/sleep.h: Add 'do ... while (0)' for '{}' block macroses.
	* include/avr/power.h: Ditto.

2009-09-14  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bug #27434.
	* include/avr/boot.h: Add parentheses around vars in inline assembly
	macros. 
	(boot_signature_byte_get) Reformat white space, remove unneeded
	temporary variable.

2009-09-10  Dmitry Xmelkov  <dmix@gmail.ru>

	Apply the patch #6878: eewr_byte.S update for patch #6718
	Thanks to Bob Paddock and Simone Zamboni for the patch.
	* libc/misc/eewr_byte.S: Fix the XMEGA part of code.
	* NEWS: Add item about patch contributed.

2009-08-31  Anitha Boyapati  <anitha.boyapati@atmel.com>

	* include/avr/iox128a1.h: Add '__extension__' to generation of 
	_WORDREGISTER and _DWORDREGISTER macros. Fix for bug #27201
	* include/avr/iox128a3.h: Same.
	* include/avr/iox128d3.h: Same.
	* include/avr/iox16a4.h: Same.
	* include/avr/iox16d4.h: Same.
	* include/avr/iox192a3.h: Same.
	* include/avr/iox256a3.h: Same.
	* include/avr/iox256a3b.h: Same.
	* include/avr/iox32a4.h: Same.
	* include/avr/iox32d4.h: Same.
	* include/avr/iox64a1.h: Same.
	* include/avr/iox64a3.h: Same.

2009-08-15  Anitha Boyapati  <anitha.boyapati@atmel.com>

	Fix for WinAVR bug #2812125. 